# VoxelEngine

./: .gitignore  App.cpp  App.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CommandManager.cpp  CommandManager.hpp  LICENSE  Makefile  PipelineManager.cpp  PipelineManager.hpp  README.md  Raytracer.cpp  Raytracer.hpp  ResourceManager.cpp  ResourceManager.hpp  SyncManager.cpp  SyncManager.hpp  VoxelWorld.cpp  VoxelWorld.hpp  VulkanContext.cpp  VulkanContext.hpp  WindowManager.cpp  WindowManager.hpp  frag.glsl  frag.spv  main.cpp  rgen.glsl  rgen.spv  rmiss.glsl  run.sh  shader.frag  shader.rgen  shader.vert  tags  voxels
VkZero/: Makefile
VkZero/include/: binding.hpp  fixed_string.hpp  shader_resource_set.hpp  shader_types.hpp  types.hpp  uniform_buffer.hpp
VkZero/src/: descriptor_pool.cpp  graphics_pipeline.cpp  raytracing_renderpass.cpp  resource_manager.cpp  (+5 more)
include/: BindResource.hpp  Binding.hpp  Camera.hpp  CommandManager.hpp  Engine.hpp  ImageHelper.h  PipelineManager.hpp  Raytracer.hpp  RenderPass.hpp  ResourceManager.hpp  ShaderBuilder.cpp  ShaderBuilder.hpp  SyncManager.hpp  VkZeroObjects.hpp  VoxelWorld.hpp  VulkanContext.hpp  WindowManager.hpp  builder.hpp  image.hpp  pipeline.hpp  shaders.hpp
shaders/: rgen.glsl  rmiss.glsl  vert.glsl
src/: Camera.cpp  CommandManager.cpp  DescriptorPool.cpp  Engine.cpp  ImageHelper.cpp  PipelineManager.cpp  Raytracer.cpp  ResourceManager.cpp  ShaderBuilder.cpp  SyncManager.cpp  VkZeroObjects.cpp  VoxelWorld.cpp  VulkanContext.cpp  WindowManager.cpp  image.cpp  main.cpp  pipeline.cpp
triangle/: makefile  tags
(+78 files in other folders)
